--- a/site-maintenance.html
+++ b/site-maintenance.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Megan - Industrial & Manufacturing Businesses HTML Template</title>
+    <title>OBP - Om Building Projects Pvt Ltd</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
-    <link rel="icon" href="assets/img/favicon.png">
+    <link rel="icon" href="assets/img/logo/logo.svg">
 
     <!-- CSS
 	============================================ -->
@@ -70,7 +70,7 @@
                         <p>Our site is down for maintenance and will be back soon. Sorry for the inconvenience. In the mean time, you
                             can visit us on our social pages.</p>
                         <div class="logo-area section-space--top--60">
-                            <a href="index.html"><img src="assets/img/logo/logo-light.png" alt=""></a>
+                            <a href="index.html"><img src="assets/img/logo/logo.svg" alt=""></a>
                         </div>
                     </div>
                 </div>
