--- a/icon-tractor.html
+++ b/icon-tractor.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
-    <link rel="icon" href="assets/img/favicon.png">
+    <link rel="icon" href="assets/img/logo/logo.svg">
 
     <!-- CSS
 	============================================ -->
@@ -113,7 +113,7 @@
                                 <!-- logo -->
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="assets/img/logo/logo-dark.png" class="img-fluid" alt="">
+                                        <img src="assets/img/logo/logo.svg" class="img-fluid" alt="">
                                     </a>
                                 </div>
 
@@ -945,12 +945,11 @@
                                 <div class="footer-intro-wrapper">
                                     <div class="footer-logo">
                                         <a href="#">
-                                            <img src="assets/img/logo/logo-light.png" class="img-fluid" alt="">
+                                            <img src="assets/img/logo/logo.svg" class="img-fluid" alt="">
                                         </a>
                                     </div>
                                     <div class="footer-desc">
-                                        Tractor is a premium HTML template embracing predominant features, outstanding
-                                        pre-designed demos, custom page layouts, and responsive pages.
+                                       OM BUILDCOM PROJECTS PRIVATE LIMITED, formerly known as K. ANANYA ENTERPRISES, is in the field of laying all types of underground pipelines such as oil and gas, sewer line, water line and electrical pipeline for cable laying.
                                     </div>
                                     <div class="social-links">
                                         <ul>
@@ -1041,7 +1040,7 @@
                         <!-- logo -->
                         <div class="logo">
                             <a href="index.html">
-                                <img src="assets/img/logo/logo-dark.png" class="img-fluid" alt="">
+                                <img src="assets/img/logo/logo.svg" class="img-fluid" alt="">
                             </a>
                         </div>
                     </div>
