--- a/utility-shifting.html
+++ b/utility-shifting.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Megan - Industrial & Manufacturing Businesses HTML Template</title>
+    <title>OBP - Om Building Projects Pvt Ltd</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
-    <link rel="icon" href="assets/img/favicon.png">
+    <link rel="icon" href="assets/img/logo/logo.svg">
 
     <!-- CSS
 	============================================ -->
@@ -79,7 +79,7 @@
                             <!-- logo -->
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="assets/img/logo/logo-dark.png" class="img-fluid" alt="">
+                                    <img src="assets/img/logo/logo.svg" class="img-fluid" alt="">
                                 </a>
                             </div>
 
@@ -169,7 +169,7 @@
                                     </ul>
                                 </nav>
                             </div>
-                            <div class="header-navigation__contact">
+                            <!-- <div class="header-navigation__contact">
                                 <div class="header-navigation__contact__image">
                                     <i class="ion-ios-telephone-outline"></i>
                                 </div>
@@ -177,7 +177,7 @@
                                     <span class="text">Call us for any question</span>
                                     <h4 class="sub-text">9718621777  9911658777</h4>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                          <!-- mobile menu -->
                         
@@ -191,16 +191,16 @@
 
     <!--====================  End of header area  ====================-->
     <!--====================  breadcrumb area ====================-->
-    <div class="breadcrumb-area breadcrumb-area-bg bg-img section-space--inner--bottom--50 section-space--inner--top--120" data-bg="assets/img/backgrounds/20.jpg">
+    <div class="breadcrumb-area breadcrumb-area-bg bg-img section-space--inner--bottom--50 section-space--inner--top--120" data-bg="assets/img/cover.jpg">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-12">
-                    <h2 class="breadcrumb-page-title breadcrumb-page-title--style2">Service Details 2</h2>
+                    <h2 class="breadcrumb-page-title breadcrumb-page-title--style2">Utility Shifting</h2>
                 </div>
                 <div class="col-lg-12">
                     <ul class="breadcrumb-page-list breadcrumb-page-list--style2 text-uppercase">
                         <li class="has-children"><a href="index.html">Home</a></li>
-                        <li>Service Details 2</li>
+                        <li>Utility Shifting</li>
                     </ul>
                 </div>
             </div>
@@ -214,9 +214,8 @@
                 <div class="col-lg-8">
                     <div class="service-details-page-content">
                         <div class="service-details-text-wrapper section-space--bottom--80">
-                            <h1 class="big-title">Mechanical Engineering</h1>
-                            <p>We set the discipline that applies engineering, physics, engineering mathematics, and materials science principles to design, analyze, manufacture, and maintain mechanical systems. It is one of the oldest and broadest of the engineering disciplines since early times.</p>
-                            <p>Technically, mechanical engineering is the application of the principles and problem-solving techniques of engineering from design to manufacturing to the marketplace for any object. Mechanical engineers analyze their work using the principles of motion, energy, and force.</p>
+                            <h1 class="big-title">Utility Shifting</h1>
+                            <p>Utility Shifting is the process of getting estimations of all the affected utilities and the project site from the concerning departments. We provide the best utility shifting service like electric cables, the pipeline for the water, etc., which are affordable and cost-effective. To obstruct the road land drainage, we lay down the utility's top 0.6 meters below. </p>
                         </div>
 
                         <div class="service-details-image-block section-space--bottom--50">
@@ -229,14 +228,11 @@
                         </div>
 
                         <div class="service-details-text-wrapper section-space--bottom--80">
-                            <h2 class="title">We’ve gotten the best solutions</h2>
-                            <p>Mechanical engineers make a difference. That's because mechanical engineering careers center on creating technologies to meet human needs. Virtually every product or service in modern life has probably been touched in some way by a mechanical engineer to help humankind.</p>
+                            <h2 class="title">We’ve got the best solutions</h2>
+                            <p>As we have experts working on the project's field, they ensure everyone's safety and maintain project/service standards. We always work environmentally safe and as per the government's guidelines. As we work according to our services' government's policy, there isn't any hassle our customers face.</p>
                         </div>
 
                         <div class="service-details-text-wrapper">
-                            <h2 class="title">We’ve gotten the best solutions</h2>
-                            <p>Mechanical engineers make a difference. That's because mechanical engineering careers center on creating technologies to meet human needs. Virtually every product or service in modern life has probably been touched in some way by a mechanical engineer to help humankind.</p>
-
                             <div class="split-text section-space--top--60">
                                 <div class="row">
                                     <div class="col-md-6">
@@ -268,10 +264,10 @@
                         <div class="single-sidebar-widget">
                             <h2 class="widget-title">Industries Served</h2>
                             <ul class="sidebar-category">
-                                <li class="active"><a href="cable-laying.html">Cable Laying</a></li>
+                                <li><a href="cable-laying.html">Cable Laying</a></li>
                                 <li><a href="water-pipe-line.html">Water Pipe Line</a></li>
                                 <li><a href="sewer-line.html">Sewer Line</a></li>
-                                <li><a href="utility-shifting.html">Utility Shifting</a></li>
+                                <li class="active"><a href="utility-shifting.html">Utility Shifting</a></li>
                                 <li><a href="trenchless-work.html">Trenchless Work</a></li>
                             </ul>
                         </div>
@@ -300,12 +296,11 @@
                                 <div class="footer-intro-wrapper">
                                     <div class="footer-logo">
                                         <a href="#">
-                                            <img src="assets/img/logo/logo-light.png" class="img-fluid" alt="">
+                                            <img src="assets/img/logo/logo.svg" class="img-fluid" alt="">
                                         </a>
                                     </div>
                                     <div class="footer-desc">
-                                        Tractor is a premium HTML template embracing predominant features, outstanding
-                                        pre-designed demos, custom page layouts, and responsive pages.
+                                       OM BUILDCOM PROJECTS PRIVATE LIMITED, formerly known as K. ANANYA ENTERPRISES, is in the field of laying all types of underground pipelines such as oil and gas, sewer line, water line and electrical pipeline for cable laying.
                                     </div>
                                     
                                 </div>
@@ -371,7 +366,7 @@
                         <!-- logo -->
                         <div class="logo">
                             <a href="index.html">
-                                <img src="assets/img/logo/logo-dark.png" class="img-fluid" alt="">
+                                <img src="assets/img/logo/logo.svg" class="img-fluid" alt="">
                             </a>
                         </div>
                     </div>
