slider transition fixed

--- a/about.html
+++ b/about.html
@@ -350,7 +350,7 @@
                                 <li>Impeccable quality work</li>
                                 <li>Maintain project’s prevailing standards</li>
                             </ul>
-                            <a href="page-about.html" class="ht-btn ht-btn--transparent ht-btn--transparent--yellow ">WHITE PAPER</a>
+                            <!-- <a href="page-about.html" class="ht-btn ht-btn--transparent ht-btn--transparent--yellow ">WHITE PAPER</a> -->
                         </div>
                     </div>
                 </div>
