--- a/utility-shifting.html
+++ b/utility-shifting.html
@@ -220,10 +220,7 @@
 
                         <div class="service-details-image-block section-space--bottom--50">
                             <div class="image">
-                                <img src="assets/img/banner/service-details-2.jpg" class="img-fluid" alt="">
-                            </div>
-                            <div class="text">
-                                Improving agricultural productivity will be an essential aspect in the future.
+                                <img src="assets/img/utility-shifting.jpg" class="img-fluid" alt="">
                             </div>
                         </div>
 
@@ -244,7 +241,7 @@
                                     <div class="col-md-6">
                                         <div class="single-split-text">
                                             <h4 class="title">Industry Benefits</h4>
-                                            <p>A forecasting and planning solution that helps the restaurant industry build a highly accurate inventory and sales forecast</p>
+                                            <p>A forecasting and planning solution that helps the development industry build a highly accurate and reliable infrastructure</p>
                                         </div>
                                     </div>
                                 </div>
