--- a/cable-laying.html
+++ b/cable-laying.html
@@ -243,7 +243,7 @@
                                     <div class="col-md-6">
                                         <div class="single-split-text">
                                             <h4 class="title">Our Solutions</h4>
-                                            <p>Review the findings from our survey of early technology adopters, and find out how to get closer to your fastest‑moving customers.</p>
+                                            <p>Review the findings from our survey with modern technology to find out the best solution of the work for fast growth of our clients</p>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
@@ -305,7 +305,7 @@
                                         </a>
                                     </div>
                                     <div class="footer-desc">
-                                       OM BUILDCOM PROJECTS PRIVATE LIMITED, formerly known as K. ANANYA ENTERPRISES, is in the field of laying all types of underground pipelines such as oil and gas, sewer line, water line and electrical pipeline for cable laying.
+                                       OM BUILDCON PROJECTS PRIVATE LIMITED, formerly known as K. ANANYA ENTERPRISES, is in the field of laying all types of underground pipelines such as oil and gas, sewer line, water line and electrical pipeline for cable laying.
                                     </div>
                                     
                                 </div>
