--- a/icon-tractor.html
+++ b/icon-tractor.html
@@ -949,7 +949,7 @@
                                         </a>
                                     </div>
                                     <div class="footer-desc">
-                                       OM BUILDCOM PROJECTS PRIVATE LIMITED, formerly known as K. ANANYA ENTERPRISES, is in the field of laying all types of underground pipelines such as oil and gas, sewer line, water line and electrical pipeline for cable laying.
+                                       OM BUILDCON PROJECTS PRIVATE LIMITED, formerly known as K. ANANYA ENTERPRISES, is in the field of laying all types of underground pipelines such as oil and gas, sewer line, water line and electrical pipeline for cable laying.
                                     </div>
                                     <div class="social-links">
                                         <ul>
