--- a/utility-shifting.html
+++ b/utility-shifting.html
@@ -226,7 +226,7 @@
 
                         <div class="service-details-text-wrapper section-space--bottom--80">
                             <h2 class="title">We’ve got the best solutions</h2>
-                            <p>As we have experts working on the project's field, they ensure everyone's safety and maintain project/service standards. We always work environmentally safe and as per the government's guidelines. As we work according to our services' government's policy, there isn't any hassle our customers face.</p>
+                            <p>As we have experts working on the project's field, they ensure everyone's safety and maintain project/service standards. We always work environmentally safe and as per the government's guidelines.</p>
                         </div>
 
                         <div class="service-details-text-wrapper">
@@ -235,7 +235,7 @@
                                     <div class="col-md-6">
                                         <div class="single-split-text">
                                             <h4 class="title">Our Solutions</h4>
-                                            <p>Review the findings from our survey of early technology adopters, and find out how to get closer to your fastest‑moving customers.</p>
+                                            <p>Review the findings from our survey with modern technology to find out the best solution of the work for fast growth of our clients</p>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
@@ -297,7 +297,7 @@
                                         </a>
                                     </div>
                                     <div class="footer-desc">
-                                       OM BUILDCOM PROJECTS PRIVATE LIMITED, formerly known as K. ANANYA ENTERPRISES, is in the field of laying all types of underground pipelines such as oil and gas, sewer line, water line and electrical pipeline for cable laying.
+                                       OM BUILDCON PROJECTS PRIVATE LIMITED, formerly known as K. ANANYA ENTERPRISES, is in the field of laying all types of underground pipelines such as oil and gas, sewer line, water line and electrical pipeline for cable laying.
                                     </div>
                                     
                                 </div>
