--- a/about.html
+++ b/about.html
@@ -319,8 +319,8 @@
                                             <img src="assets/img/icons/about-icon3.png" alt="">
                                         </div>
                                         <div class="about-icon-box__content">
-                                            <h4 class="title">Corporate Accountability</h4>
-                                            <p class="content">We assure that our company will always keep our performance and behavior in line with the government's regulations on environment protection.</p>
+                                            <h4 class="title">Services Enhancement</h4>
+                                            <p class="content">We always make slight or major changes in our services when the industry fluctuate to ensure our customers get exactly what is in need or trending.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -462,8 +462,8 @@
                                             <img src="index images/awards1.jpg" class="img-fluid" alt="">
                                         </div>
                                         <div class="about-box-image-single__content">
-                                            <h4 class="title">Awards & Accolades</h4>
-                                            <p>The rewards we received are the noble compliments for what we have done.</p>
+                                            <h4 class="title">Social Responsibilities</h4>
+                                            <p>Our operation aligns with and forms a business model in order to succeed.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -473,8 +473,8 @@
                                             <img src="index images/bp.jpg" class="img-fluid" alt="">
                                         </div>
                                         <div class="about-box-image-single__content">
-                                            <h4 class="title">Business Partnerships</h4>
-                                            <p>We established the partnership with over 200 oversea brands and companies.</p>
+                                            <h4 class="title">Customers Satisfaction</h4>
+                                            <p>As per our quality standards, we always make sure our customers get high-quality services.</p>
                                         </div>
                                     </div>
                                 </div>
