--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                                 <!-- single feature project box -->
                                 <div class="single-feature-project-box">
                                     <div class="single-feature-project-box__image">
-                                        <img src="index images/socialrespo.jpg" class="img-fluid" alt="">
+                                        <img src="index-images/socialrespo.jpg" class="img-fluid" alt="">
                                     </div>
                                     <div class="single-feature-project-box__content">
                                         <h3 class="single-feature-project-box__title">Social Responsibilities</h3>
@@ -319,7 +319,7 @@
                                 <!-- single feature project box -->
                                 <div class="single-feature-project-box">
                                     <div class="single-feature-project-box__image">
-                                        <img src="index images/leadership.jpg" class="img-fluid" alt="">
+                                        <img src="index-images/leadership.jpg" class="img-fluid" alt="">
                                     </div>
                                     <div class="single-feature-project-box__content">
                                         <h3 class="single-feature-project-box__title">Leadership Role</h3>
@@ -331,11 +331,11 @@
                                 <!-- single feature project box -->
                                 <div class="single-feature-project-box">
                                     <div class="single-feature-project-box__image">
-                                        <img src="index images/awards.jpg" class="img-fluid" alt="">
+                                        <img src="index-images/awards.jpg" class="img-fluid" alt="">
                                     </div>
                                     <div class="single-feature-project-box__content">
-                                        <h3 class="single-feature-project-box__title">Awards & Accolades</h3>
-                                        <p class="single-feature-project-box__subtitle">The rewards we received are the noble compliments for what we have done.</p>
+                                        <h3 class="single-feature-project-box__title">Customers Satisfaction</h3>
+                                        <p class="single-feature-project-box__subtitle">As per our quality standards, we always make sure our customers get high-quality services.</p>
                                     </div>
                                 </div>
                             </div>
@@ -351,7 +351,7 @@
                                     <div class="row align-items-center">
                                         <div class="col-md-6">
                                             <div class="feature-project-single-slide__image">
-                                                <img src="index images/environmental.png" class="img-fluid" alt="">
+                                                <img src="index-images/environmental.png" class="img-fluid" alt="">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
@@ -370,7 +370,7 @@
                                     <div class="row align-items-center">
                                         <div class="col-md-6">
                                             <div class="feature-project-single-slide__image">
-                                                <img src="index images/integrity.png" class="img-fluid" alt="">
+                                                <img src="index-images/integrity.png" class="img-fluid" alt="">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
@@ -389,7 +389,7 @@
                                     <div class="row align-items-center">
                                         <div class="col-md-6">
                                             <div class="feature-project-single-slide__image">
-                                                <img src="index images/safety.png" class="img-fluid" alt="">
+                                                <img src="index-images/safety.png" class="img-fluid" alt="">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
@@ -656,20 +656,17 @@
     </div>
     <!----====================  End of featured project two slider area  ====================-->                        
     <!--====================  project counter area ====================-->
-    <div class="project-counter-area">
+    <!-- <div class="project-counter-area">
         <div class="row no-gutters">
             <div class="col-lg-12">
                 <div class="project-counter-wrapper">
-                    <!-- project counter-bg -->
                     <div class="project-counter-bg bg-img" data-bg="assets/img/backgrounds/7.jpg"></div>
-                    <!-- project counter content -->
                     <div class="project-counter-content">
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="project-counter-single-content-wrapper">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <!-- project counter single content -->
                                             <div class="project-counter-single-content">
                                                 <div class="project-counter-single-content__image">
                                                     <img src="assets/img/icons/tree.png" class="img-fluid" alt="">
@@ -682,7 +679,6 @@
                                             </div>
                                         </div>
                                         <div class="col-md-6">
-                                            <!-- project counter single content -->
                                             <div class="project-counter-single-content">
                                                 <div class="project-counter-single-content__image">
                                                     <img src="assets/img/icons/home.png" class="img-fluid" alt="">
@@ -702,7 +698,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>  -->
     <!--====================  End of project counter area  ====================-->
   
     <!--====================  support footer area ====================-->
