--- a/index.html
+++ b/index.html
@@ -710,7 +710,8 @@
             </div>
             <div class="col-md-6">
                 <div class="support-footer__single bg-img" data-bg="assets/img/icons/message.png">
-                    Email: obppl777@gmail.com
+                    Email: manish.bhati@ombuildconprojects.com
+info@ombuildconprojects.com
                 </div>
             </div>
             <div class="col-md-6">
