--- a/about.html
+++ b/about.html
@@ -473,6 +473,72 @@
                         </div>
                       </div>
                     </div>
+                    <div class="swiper-slide">
+                      <div class="team-slider__single">
+                        <div class="image">
+                          <img
+                            src="assets/img/about/tool7.jpg"
+                            class="img-fluid"
+                            alt=""
+                          />
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="team-slider__single">
+                        <div class="image">
+                          <img
+                            src="assets/img/about/tool8.jpg"
+                            class="img-fluid"
+                            alt=""
+                          />
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="team-slider__single">
+                        <div class="image">
+                          <img
+                            src="assets/img/about/tool9.jpg"
+                            class="img-fluid"
+                            alt=""
+                          />
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="team-slider__single">
+                        <div class="image">
+                          <img
+                            src="assets/img/about/tool10.jpg"
+                            class="img-fluid"
+                            alt=""
+                          />
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="team-slider__single">
+                        <div class="image">
+                          <img
+                            src="assets/img/about/tool11.jpg"
+                            class="img-fluid"
+                            alt=""
+                          />
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="team-slider__single">
+                        <div class="image">
+                          <img
+                            src="assets/img/about/tool12.jpg"
+                            class="img-fluid"
+                            alt=""
+                          />
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <div
@@ -655,7 +721,7 @@
                       </h4>
                       <p class="single-icon-info__text">
                         24/7 Support<br />
-                        +91 9718621777, 9911658777
+                        +91 9911658777, 9718621777
                       </p>
                     </div>
                   </div>
@@ -676,8 +742,9 @@
                         Email Us
                       </h4>
                       <p class="single-icon-info__text">
-                        manish.bhati@ombuildconprojects.com
                         info@ombuildconprojects.com
+                        sachin.bhati@ombuildconprojects.com
+                        manish.bhati@ombuildconprojects.com
                       </p>
                     </div>
                   </div>
