--- a/contact.html
+++ b/contact.html
@@ -238,7 +238,7 @@
                         Registered Office
                       </h4>
                       <p class="single-icon-info__text">
-                        Kh No. 120, 1st Floor Stret No. 12 <br/>
+                        Kh No. 120, 1st Floor Stret No. 12 <br />
                         Village Wazirabad Extn. Delhi-110084
                       </p>
                     </div>
@@ -261,7 +261,7 @@
                       </h4>
                       <p class="single-icon-info__text">
                         24/7 <br />
-                        +91 9718621777, 9911658777
+                        +91 9911658777, 9718621777
                       </p>
                     </div>
                   </div>
@@ -282,8 +282,9 @@
                         Email Us
                       </h4>
                       <p class="single-icon-info__text">
-                        manish.bhati@ombuildconprojects.com
                         info@ombuildconprojects.com
+                        sachin.bhati@ombuildconprojects.com
+                        manish.bhati@ombuildconprojects.com
                       </p>
                     </div>
                   </div>
