--- a/trenchless-work.html
+++ b/trenchless-work.html
@@ -221,7 +221,7 @@
 
                         <div class="service-details-image-block section-space--bottom--50">
                             <div class="image">
-                                <img src="assets/img/trenchless-work.jpg" class="img-fluid" alt="">
+                                <img src="assets/img/trenchless-work.jpeg" class="img-fluid" alt="">
                             </div>
                         </div>
 
