--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                                           <i class="ion-ios-chatboxes-outline"></i>
                                                       </div>
                                                       <div class="header-info-single-item__content">
-                                                          <h6 class="header-info-single-item__title">+91 9718621777</h6>
+                                                          <h6 class="header-info-single-item__title">+91 9911658777, 9718621777</h6>
                                                           <p class="header-info-single-item__subtitle">For Query</p>
                                                       </div>
                                                   </div>
@@ -533,7 +533,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="industry-slider-content-single bg-img" data-bg="assets/img/backgrounds/2.jpg">
+                        <div class="industry-slider-content-single bg-img" data-bg="assets/img/backgrounds/2.jpeg">
                             <div class="container">
                                 <div class="industry-content-inner">
                                     <div class="section-title-area">
