--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="industry-slider-content-single bg-img" data-bg="assets/img/backgrounds/3.jpg">
+                        <div class="industry-slider-content-single bg-img" data-bg="assets/img/backgrounds/3.jpeg">
                             <div class="container">
                                 <div class="industry-content-inner">
                                     <div class="section-title-area">
